classDiagram
    direction TB
    class Repository {
        +entities_type : string
        #use_logs : bool
        #logs_repository : Logs
        -map : array
        +disable_logs()
        +enable_logs()
        +get_enabled_logs()
        #__construct()
        +init_objects()
        +get_map()
        +get_name()
        +insert(obj)
        +insert_metadata(obj, prop, diffs)
        +maybe_add_slashes(value)
        +fetch_output(WP_Query, output)
        +parse_fetch_args(args)
        +get_default_properties(map)
        +get_mapped_property(entity, prop)
        +$get_collections_db_identifiers()
        +$get_entity_by_post(post)
        +$get_entity_by_post_type(post_type, post)
        +$get_repository(entity)
        +fetch_one(args)
        +trash(entity)
        +delete(entity, permanent)
        -delete_attachments(entity)
        +can_edit(entity, user)
        +can_read(entity, user)
        +can_delete(entity, user)
        +can_publish(entity, user)
        +unique_multidimensional_array(array, key)
        -insert_thumbnail(obj, diffs)
        +get_descendants_ids(id, depth)
        +get_capabilities()
        #sanitize_value(content)
    }
    class Taxonomies {
        +entities_type : mixed
        #init()
        #_get_map()
        +get_cpt_labels()
        +register_post_type()
        +insert(taxonomy)
        +fetch(args, output)
        +fetch_by_collection(collection, args, output)
        +fetch_by_db_identifier(db_identifier)
        +update(object, new_values)
        +delete(taxonomy, permanent)
        +added_collection(taxonomy_id, collection_id)
        +removed_collection(taxonomy_id, collection_id)
        +update_taxonomy_registry_for_collection(taxonomy_id, collection_id)
        +register_taxonomies_for_all_collections(all_collections)
        +get_db_identifier_by_id(id)
        +get_id_by_db_identifier(db_identifier)
        +term_exists(taxonomy, term_name, parent, return_term)
    }
    Repository ..> Repository
    Repository ..> Taxonomies
    Repository <|-- Taxonomies
